force-app/main/default/objects/custom_create254__c/custom_create254__c.object-meta.xml
<CustomObject>
    <label>Custom created object254</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects254</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>