force-app/main/default/objects/custom_create254__c/fields/custom_create_254field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_254field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 254field539</label>
    <type>Checkbox</type>
</CustomField>